--- a/css/Covid.css
+++ b/css/Covid.css
@@ -1,13 +1,29 @@
 body {
     background-color: skyblue;
   }
-  h1 {
+  *{
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+  }
+  header {
+    margin: 20px 0px;
     text-align: center;
     background-color: black;
     color: white;
     padding: 20px;
     border-radius: 20px;
     font-family: Arial, Helvetica, sans-serif;
+    width: 100%;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+  }
+  img{
+    width: 60px;
+    height: 60px;
+    margin-top: -14px;
+    margin-right: 20px;
   }
   #myDiv {
     width: 500px;
